# src/main/java/com/devweb/plocadora/web/api/DependenteApi.java
@@ -1,0 +1,212 @@
+/**
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.2.0).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+package com.devweb.plocadora.web.api;
+
+import com.devweb.plocadora.web.model.AtualizarDependenteApiModel;
+import com.devweb.plocadora.web.model.DependenteApiModel;
+import com.devweb.plocadora.web.model.ErroRequisicaoApiModel;
+import io.swagger.v3.oas.annotations.ExternalDocumentation;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.Parameters;
+import io.swagger.v3.oas.annotations.media.ArraySchema;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.security.SecurityRequirement;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import io.swagger.v3.oas.annotations.enums.ParameterIn;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.context.request.NativeWebRequest;
+import org.springframework.web.multipart.MultipartFile;
+
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import jakarta.annotation.Generated;
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen")
+@Validated
+@Tag(name = "dependente", description = "the dependente API")
+public interface DependenteApi {
+
+    /**
+     * DELETE /dependente/{dependente_id} : 
+     *
+     * @param dependenteId  (required)
+     * @return No Content (status code 204)
+     *         or Bad Request (status code 400)
+     *         or Internal Server Error (status code 500)
+     */
+    @Operation(
+        operationId = "deleteDependenteDependenteId",
+        summary = "",
+        responses = {
+            @ApiResponse(responseCode = "204", description = "No Content"),
+            @ApiResponse(responseCode = "400", description = "Bad Request", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = ErroRequisicaoApiModel.class))
+            }),
+            @ApiResponse(responseCode = "500", description = "Internal Server Error", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = ErroRequisicaoApiModel.class))
+            })
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.DELETE,
+        value = "/dependente/{dependente_id}",
+        produces = { "application/json" }
+    )
+    
+    ResponseEntity<Void> deleteDependenteDependenteId(
+        @Parameter(name = "dependente_id", description = "", required = true, in = ParameterIn.PATH) @PathVariable("dependente_id") String dependenteId
+    );
+
+
+    /**
+     * GET /dependente : Your GET endpoint
+     *
+     * @return OK (status code 200)
+     *         or Bad Request (status code 400)
+     *         or Internal Server Error (status code 500)
+     */
+    @Operation(
+        operationId = "getDependente",
+        summary = "Your GET endpoint",
+        tags = {  },
+        responses = {
+            @ApiResponse(responseCode = "200", description = "OK", content = {
+                @Content(mediaType = "application/json", array = @ArraySchema(schema = @Schema(implementation = DependenteApiModel.class)))
+            }),
+            @ApiResponse(responseCode = "400", description = "Bad Request", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = ErroRequisicaoApiModel.class))
+            }),
+            @ApiResponse(responseCode = "500", description = "Internal Server Error", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = ErroRequisicaoApiModel.class))
+            })
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.GET,
+        value = "/dependente",
+        produces = { "application/json" }
+    )
+    
+    ResponseEntity<List<DependenteApiModel>> getDependente(
+        
+    );
+
+
+    /**
+     * GET /dependente/{dependente_id} : Your GET endpoint
+     *
+     * @param dependenteId  (required)
+     * @return OK (status code 200)
+     *         or Bad Request (status code 400)
+     *         or Internal Server Error (status code 500)
+     */
+    @Operation(
+        operationId = "getDependenteDependenteId",
+        summary = "Your GET endpoint",
+        tags = {  },
+        responses = {
+            @ApiResponse(responseCode = "200", description = "OK", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = DependenteApiModel.class))
+            }),
+            @ApiResponse(responseCode = "400", description = "Bad Request", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = ErroRequisicaoApiModel.class))
+            }),
+            @ApiResponse(responseCode = "500", description = "Internal Server Error", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = ErroRequisicaoApiModel.class))
+            })
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.GET,
+        value = "/dependente/{dependente_id}",
+        produces = { "application/json" }
+    )
+    
+    ResponseEntity<DependenteApiModel> getDependenteDependenteId(
+        @Parameter(name = "dependente_id", description = "", required = true, in = ParameterIn.PATH) @PathVariable("dependente_id") String dependenteId
+    );
+
+
+    /**
+     * POST /dependente : 
+     *
+     * @return Created (status code 201)
+     *         or Bad Request (status code 400)
+     *         or Internal Server Error (status code 500)
+     */
+    @Operation(
+        operationId = "postDependente",
+        summary = "",
+        responses = {
+            @ApiResponse(responseCode = "201", description = "Created", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = DependenteApiModel.class))
+            }),
+            @ApiResponse(responseCode = "400", description = "Bad Request", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = ErroRequisicaoApiModel.class))
+            }),
+            @ApiResponse(responseCode = "500", description = "Internal Server Error", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = ErroRequisicaoApiModel.class))
+            })
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.POST,
+        value = "/dependente",
+        produces = { "application/json" }
+    )
+    
+    ResponseEntity<DependenteApiModel> postDependente(
+        
+    );
+
+
+    /**
+     * PUT /dependente/{dependente_id} : 
+     *
+     * @param dependenteId  (required)
+     * @param atualizarDependenteApiModel  (optional)
+     * @return OK (status code 200)
+     *         or Bad Request (status code 400)
+     *         or Internal Server Error (status code 500)
+     */
+    @Operation(
+        operationId = "putDependenteDependenteId",
+        summary = "",
+        responses = {
+            @ApiResponse(responseCode = "200", description = "OK", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = DependenteApiModel.class))
+            }),
+            @ApiResponse(responseCode = "400", description = "Bad Request", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = ErroRequisicaoApiModel.class))
+            }),
+            @ApiResponse(responseCode = "500", description = "Internal Server Error", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = ErroRequisicaoApiModel.class))
+            })
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.PUT,
+        value = "/dependente/{dependente_id}",
+        produces = { "application/json" },
+        consumes = { "application/json" }
+    )
+    
+    ResponseEntity<DependenteApiModel> putDependenteDependenteId(
+        @Parameter(name = "dependente_id", description = "", required = true, in = ParameterIn.PATH) @PathVariable("dependente_id") String dependenteId,
+        @Parameter(name = "AtualizarDependenteApiModel", description = "") @Valid @RequestBody(required = false) AtualizarDependenteApiModel atualizarDependenteApiModel
+    );
+
+}
