# src/main/java/com/devweb/plocadora/web/api/SocioApi.java
@@ -1,0 +1,216 @@
+/**
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.2.0).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+package com.devweb.plocadora.web.api;
+
+import com.devweb.plocadora.web.model.AtualizarSocioApiModel;
+import com.devweb.plocadora.web.model.ErroRequisicaoApiModel;
+import com.devweb.plocadora.web.model.NovoSocioApiModel;
+import com.devweb.plocadora.web.model.SocioApiModel;
+import com.devweb.plocadora.web.model.SocioCriadoApiModel;
+import io.swagger.v3.oas.annotations.ExternalDocumentation;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.Parameters;
+import io.swagger.v3.oas.annotations.media.ArraySchema;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.security.SecurityRequirement;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import io.swagger.v3.oas.annotations.enums.ParameterIn;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.context.request.NativeWebRequest;
+import org.springframework.web.multipart.MultipartFile;
+
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import jakarta.annotation.Generated;
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen")
+@Validated
+@Tag(name = "socio", description = "the socio API")
+public interface SocioApi {
+
+    /**
+     * DELETE /socio/{socio_id} : 
+     *
+     * @param socioId  (required)
+     * @return No Content (status code 204)
+     *         or Bad Request (status code 400)
+     *         or Internal Server Error (status code 500)
+     */
+    @Operation(
+        operationId = "deleteSocioSocioId",
+        summary = "",
+        responses = {
+            @ApiResponse(responseCode = "204", description = "No Content"),
+            @ApiResponse(responseCode = "400", description = "Bad Request", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = ErroRequisicaoApiModel.class))
+            }),
+            @ApiResponse(responseCode = "500", description = "Internal Server Error", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = ErroRequisicaoApiModel.class))
+            })
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.DELETE,
+        value = "/socio/{socio_id}",
+        produces = { "application/json" }
+    )
+    
+    ResponseEntity<Void> deleteSocioSocioId(
+        @Parameter(name = "socio_id", description = "", required = true, in = ParameterIn.PATH) @PathVariable("socio_id") String socioId
+    );
+
+
+    /**
+     * GET /socio : Your GET endpoint
+     *
+     * @return OK (status code 200)
+     *         or Bad Request (status code 400)
+     *         or Internal Server Error (status code 500)
+     */
+    @Operation(
+        operationId = "getSocio",
+        summary = "Your GET endpoint",
+        tags = {  },
+        responses = {
+            @ApiResponse(responseCode = "200", description = "OK", content = {
+                @Content(mediaType = "application/json", array = @ArraySchema(schema = @Schema(implementation = SocioApiModel.class)))
+            }),
+            @ApiResponse(responseCode = "400", description = "Bad Request", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = ErroRequisicaoApiModel.class))
+            }),
+            @ApiResponse(responseCode = "500", description = "Internal Server Error", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = ErroRequisicaoApiModel.class))
+            })
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.GET,
+        value = "/socio",
+        produces = { "application/json" }
+    )
+    
+    ResponseEntity<List<SocioApiModel>> getSocio(
+        
+    );
+
+
+    /**
+     * GET /socio/{socio_id} : Your GET endpoint
+     *
+     * @param socioId  (required)
+     * @return OK (status code 200)
+     *         or Bad Request (status code 400)
+     *         or Internal Server Error (status code 500)
+     */
+    @Operation(
+        operationId = "getSocioSocioId",
+        summary = "Your GET endpoint",
+        tags = {  },
+        responses = {
+            @ApiResponse(responseCode = "200", description = "OK", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = SocioApiModel.class))
+            }),
+            @ApiResponse(responseCode = "400", description = "Bad Request", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = ErroRequisicaoApiModel.class))
+            }),
+            @ApiResponse(responseCode = "500", description = "Internal Server Error", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = ErroRequisicaoApiModel.class))
+            })
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.GET,
+        value = "/socio/{socio_id}",
+        produces = { "application/json" }
+    )
+    
+    ResponseEntity<SocioApiModel> getSocioSocioId(
+        @Parameter(name = "socio_id", description = "", required = true, in = ParameterIn.PATH) @PathVariable("socio_id") String socioId
+    );
+
+
+    /**
+     * POST /socio : 
+     *
+     * @param novoSocioApiModel  (optional)
+     * @return Created (status code 201)
+     *         or Bad Request (status code 400)
+     *         or Internal Server Error (status code 500)
+     */
+    @Operation(
+        operationId = "postSocio",
+        summary = "",
+        responses = {
+            @ApiResponse(responseCode = "201", description = "Created", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = SocioCriadoApiModel.class))
+            }),
+            @ApiResponse(responseCode = "400", description = "Bad Request", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = ErroRequisicaoApiModel.class))
+            }),
+            @ApiResponse(responseCode = "500", description = "Internal Server Error", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = ErroRequisicaoApiModel.class))
+            })
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.POST,
+        value = "/socio",
+        produces = { "application/json" },
+        consumes = { "application/json" }
+    )
+    
+    ResponseEntity<SocioCriadoApiModel> postSocio(
+        @Parameter(name = "NovoSocioApiModel", description = "") @Valid @RequestBody(required = false) NovoSocioApiModel novoSocioApiModel
+    );
+
+
+    /**
+     * PUT /socio/{socio_id} : 
+     *
+     * @param socioId  (required)
+     * @param atualizarSocioApiModel  (optional)
+     * @return OK (status code 200)
+     *         or Bad Request (status code 400)
+     *         or Internal Server Error (status code 500)
+     */
+    @Operation(
+        operationId = "putSocioSocioId",
+        summary = "",
+        responses = {
+            @ApiResponse(responseCode = "200", description = "OK", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = SocioApiModel.class))
+            }),
+            @ApiResponse(responseCode = "400", description = "Bad Request", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = ErroRequisicaoApiModel.class))
+            }),
+            @ApiResponse(responseCode = "500", description = "Internal Server Error", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = ErroRequisicaoApiModel.class))
+            })
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.PUT,
+        value = "/socio/{socio_id}",
+        produces = { "application/json" },
+        consumes = { "application/json" }
+    )
+    
+    ResponseEntity<SocioApiModel> putSocioSocioId(
+        @Parameter(name = "socio_id", description = "", required = true, in = ParameterIn.PATH) @PathVariable("socio_id") String socioId,
+        @Parameter(name = "AtualizarSocioApiModel", description = "") @Valid @RequestBody(required = false) AtualizarSocioApiModel atualizarSocioApiModel
+    );
+
+}
